tests/typecheck/pass/indexread_bound_named_elem.tw
type D = { A }

fn first<C: IndexRead<D>>(xs: C) D {
  xs.at(0)
}

x := first([D.A])
