tests/typecheck/fail/vector_empty_ambiguous.tw
fn no_usage() {
  xs := []
}
